# hex_maze_interface_python

./: README.md  Start Cluster Control.cmd  WINDOWS.md  codemeta.json  config.json  hardware_controller_tuning_test.py  hardware_driver_status_move_probe.py  hardware_duplicate_target_regression_test.py  hardware_edge_case_test.py  hardware_gui_sequence_test.py  hardware_home_noise_sweep.py  hardware_home_tuning_test.py  hardware_incremental_home_stress_test.py  hardware_preinstall_acceptance_test.py  hardware_regression_test.py  hardware_repeated_home_test.py  hardware_researcher_workflow_stress_test.py  hardware_smoke_test.py  pyproject.toml  setup.cfg  setup.py  torture_test.py
.github/workflows/: build-cluster-control.yml
.metadata/: Makefile  metadata.org
.metadata/docker/: Dockerfile  Dockerfile.dev
.metadata/emacs/: init.el
.metadata/guix/: channels.scm  guix.scm
documentation/: cluster-control.md
hardware_tests/: README.md  hardware_driver_status_move_probe.py  hardware_duplicate_target_regression_test.py  hardware_edge_case_test.py  hardware_full_rig_motion_profile_test.py  hardware_home_noise_sweep.py  hardware_incremental_home_stress_test.py  hardware_preinstall_acceptance_test.py  hardware_regression_test.py  hardware_repeated_home_test.py  hardware_researcher_workflow_stress_test.py
hex_maze_interface/: __about__.py  __init__.py  __main__.py  cli.py  cluster_control.py  cluster_control_web.py  hex_maze_interface.py
hex_maze_interface/static/: __init__.py
hex_maze_interface/static/cluster_control/: __init__.py  cluster-control.css  cluster-control.js  index.html
tests/: test_cli.py  test_cluster_control.py  test_cluster_control_web.py  test_hex_maze_interface.py
tools/: cluster_control_launcher.py
